# bookbinder

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
bookbinder/: Cargo.toml
bookbinder/src/: README.md  deserialization.rs  lib.rs  main.rs
bookbinder/tests/: afterword.md  appendix1.md  appendix2.md  everything_book.json  everything_book.rs  foreword.md  introduction.md  mainmatter1.md  note.md  pamela.htm  pamela.json  pamela.md  preface.md  test.epub
bookbinder_ast/: Cargo.toml  README.md
bookbinder_ast/src/: helpers.rs  lib.rs  metadata.rs
bookbinder_common/: Cargo.toml  README.md
bookbinder_common/src/: fonts.rs  isbn.rs  lib.rs  mimetypes.rs  num_conversions.rs  svg.rs
bookbinder_epub/: Cargo.toml  README.md  build.rs  data.toml
bookbinder_epub/src/: default_css.css  lib.rs  paragraph_breaker.rs  svg_titlepage_generator.rs  text_splitting.rs
bookbinder_latex/: Cargo.toml  README.md
bookbinder_latex/src/: lib.rs  preamble_options.rs
bookbinder_latex/src/resources/: preamble_housekeeping.tex  preamble_new.tex  preamble_patches.tex  preamble_pfbreak.tex
epub_bundler/: Cargo.toml  README.md
epub_bundler/src/: builder.rs  lib.rs
epub_metadata/: Cargo.toml  README.md
epub_metadata/src/: lib.rs
extended_pulldown/: Cargo.toml  README.md
extended_pulldown/src/: lib.rs  parsing.rs  quotes.rs  sub_and_superscript.rs
temp_file_name/: Cargo.toml  README.md
temp_file_name/src/: lib.rs
