[package]
name = "bookbinder"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookbinder_ast = {path="../bookbinder_ast"}
bookbinder_epub = {path="../bookbinder_epub"}
bookbinder_latex = {path="../bookbinder_latex"}
serde = {version="^1", features = ["derive"]}
serde_json = "^1"

