[package]
name = "bookbinder"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Produce books in various formats from markdown, with some understanding of structural semantics and rendering options"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookbinder_ast = {path="../bookbinder_ast", version="0.1.0"}
bookbinder_epub = {path="../bookbinder_epub", version="0.1.0"}
bookbinder_latex = {path="../bookbinder_latex", version="0.1.0"}
serde = {version="^1", features = ["derive"]}
serde_json = "^1"

[dev-dependencies]
lopdf = "0.26.0"
bookbinder_common = {path="../bookbinder_common", version="0.1.0"}