[package]
name = "bookbinder_ast"
version = "0.1.1"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Produce abstract representations of a book for later rendering"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended_pulldown = {path="../extended_pulldown", version="0.1.0"}
bookbinder_common = {path="../bookbinder_common", version="0.1.1"}
pulldown-cmark = "^0.8"
temp_file_name = {path="../temp_file_name", version="0.1.0"}