[package]
name = "bookbinder_epub"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Produce epub books"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookbinder_ast = {path="../bookbinder_ast", version="0.1.0"}
bookbinder_common = {path="../bookbinder_common", version="0.1.0"}
epub_bundler = {path="../epub_bundler", version="0.1.0"}
extended_pulldown = {path="../extended_pulldown", version="0.1.0"}
temp_file_name = {path="../temp_file_name", version="0.1.0"}
uuid = {version="0.8.1", features=["v4"]}
rustybuzz = "^0.2"
resvg = {git="https://github.com/RazrFalcon/resvg", version="^0.11"}
usvg = {git="https://github.com/RazrFalcon/resvg", version="^0.11"}
svgtypes = "0.5"
image = {version = "0.23.9", features = ["png", "jpeg"]}
fontdb = "0.2.0"
lazy_static = "^1.4"
ttf-parser = "^0.8"
base64 = "0.12.3"
paragraph-breaker = "0.4.3"

[build_dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.5.7"
quote = "1.0"
proc-macro2 = "1.0"