[package]
name = "bookbinder_latex"
version = "0.1.1"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Produce latex and pdf books"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookbinder_ast = {path="../bookbinder_ast", version="0.1.0"}
extended_pulldown = {path="../extended_pulldown", version="0.1.0"}
bookbinder_common = {path="../bookbinder_common", version="0.1.1"}
temp_file_name = {path="../temp_file_name", version="0.1.0"}
lazy_static = "^1.4"