[package]
name = "epub_bundler"
version = "0.1.1"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Bundle xhtml, resources and metadata into standards-compliant epubs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub_metadata = {path = "../epub_metadata", version="0.1.0"}
zip = {version = "0.5.4", default-features = false}
bookbinder_common = {path = "../bookbinder_common", version="0.1.1"}
temp_file_name = {path="../temp_file_name", version="0.1.0"}
mime = "0.3"
time = "0.1"
regex = "1.3"
uuid = {version="0.8", features=["v4"]}