[package]
name = "epub_metadata"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}