[package]
name = "extended_pulldown"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "Wrapper around pulldown-cmark with extended features for book publication"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "^0.8"
aho-corasick = "^0.7"
lazy_static = "^1.4"
regex = "^1"