[package]
name = "temp_file_name"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"
repository = "https://github.com/fizzbucket/bookbinder"
license = "MIT OR Apache-2.0"
description = "generate temporary filenames and paths from a hash of arbitrary data so that they are consistent across different crates."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
